# Work-with-SQL

./: CMakeLists.txt  README.md
include/: DatabaseHandler.hpp  Staff.hpp  Timer.hpp  Utils.hpp
src/: Database.cpp  DatabaseHandler.cpp  Staff.cpp  Timer.cpp  Utils.cpp  main.cpp
